# d4c

./: CMakeLists.txt  README.md  index.html
doxygen/: generate.txt
doxygen/doc/html/: annotated.html  classes.html  classiCub_1_1d4c_1_1D4C.html  d4cExample_2main_8cpp_source.html  d4cServer_2main_8cpp_source.html  d4c_8h_source.html  d4c__client_8cpp_source.html  d4c__client_8h_source.html  d4c__helpers_8cpp_source.html  d4c__helpers_8h_source.html  d4c__server_8cpp_source.html  d4c__server_8h_source.html  dir_05906369c2d654c318c8e5f0b9121080.html  dir_09e2a23e449987cffac722db893737cc.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_6da782a0f1d54235d451d380222fd43d.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  dir_adae1137afda38b4ce421daebc84375a.html  dir_dd932bb12c37a7efe8dbdca8fd16f2ba.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  files.html  functions.html  functions_func.html  group__d4c.html  group__d4cExample.html  group__d4cServer.html  hierarchy.html  index.html  modules.html
doxygen/doc/html/search/: all_1.js  all_2.js  all_4.js  all_6.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  groups_0.js  searchdata.js
doxygen/doc/latex/: annotated.tex  classiCub_1_1d4c_1_1D4C.tex  dir_05906369c2d654c318c8e5f0b9121080.tex  dir_09e2a23e449987cffac722db893737cc.tex  dir_5a30104352ef4255dc24354b02eb2d20.tex  dir_6da782a0f1d54235d451d380222fd43d.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_a065c5f60305fee3569f887679366939.tex  dir_adae1137afda38b4ce421daebc84375a.tex  dir_dd932bb12c37a7efe8dbdca8fd16f2ba.tex  dir_e05d7e2b1ecd646af5bb94391405f3b5.tex  group__d4c.tex  group__d4cExample.tex  group__d4cServer.tex  hierarchy.tex  modules.tex  refman.tex
lib/: CMakeLists.txt
lib/include/iCub/d4c/: d4c.h
modules/: CMakeLists.txt
modules/d4cExample/: CMakeLists.txt  main.cpp
modules/d4cServer/: CMakeLists.txt  main.cpp
